<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/fullNameEt"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_50dp"
        android:background="@color/secondaryLightColor"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="@dimen/dimen_10dp"
        android:textSize="@dimen/text_size_x_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@color/secondaryLightColor"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="@dimen/dimen_10dp"
        android:textSize="@dimen/text_size_x_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameEt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEt"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@color/secondaryLightColor"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/dimen_10dp"
        android:textSize="@dimen/text_size_x_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/dobEt"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@color/secondaryLightColor"
        android:hint="@string/dob"
        android:inputType="date"
        android:padding="@dimen/dimen_10dp"
        android:textSize="@dimen/text_size_x_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@color/secondaryLightColor"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/dimen_10dp"
        android:textSize="@dimen/text_size_x_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dobEt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/confirmPasswordEt"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@color/secondaryLightColor"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="@dimen/dimen_10dp"
        android:textSize="@dimen/text_size_x_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_btn"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEt" />

</androidx.constraintlayout.widget.ConstraintLayout>