<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/usernameEt"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_50dp"
        android:background="@color/secondaryLightColor"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="@dimen/dimen_10dp"
        android:textSize="@dimen/text_size_x_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordEt"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@color/secondaryLightColor"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/dimen_10dp"
        android:textSize="@dimen/text_size_x_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEt" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/remember_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEt" />

    <CheckedTextView
        android:id="@+id/remember_me_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/remember_me"
        app:layout_constraintBottom_toBottomOf="@+id/remember_checkbox"
        app:layout_constraintStart_toEndOf="@+id/remember_checkbox"
        app:layout_constraintTop_toTopOf="@+id/remember_checkbox" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgot_password_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_btn"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>
