<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardStyle"
    app:cardCornerRadius="@dimen/dimen_5dp"
    app:cardElevation="@dimen/dimen_2dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:animateLayoutChanges="true">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fp_username"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@color/secondaryLightColor"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="@dimen/dimen_10dp"
            android:textSize="@dimen/text_size_x_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fp_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@color/secondaryLightColor"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/dimen_10dp"
            android:textSize="@dimen/text_size_x_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fp_username" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fp_confirmPasswordEt"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@color/secondaryLightColor"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/dimen_10dp"
            android:textSize="@dimen/text_size_x_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fp_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_btn"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fp_confirmPasswordEt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>